# SpMV-investigation

./: .gitignore  CMakeLists.txt  README.md  sbatch.sh
include/: common.hpp  csr_matrix.hpp  cuda_event_chrono.cuh  dense_vector.hpp  metrics.hpp  mtx_parser.hpp  spmv.hpp  spmv_common.cuh  spmv_common.hpp  spmv_cpu.hpp  spmv_csr_adaptive.cuh  spmv_csr_stream.cuh  spmv_csr_stream.hpp  spmv_csr_vector.cuh  spmv_csr_vector.hpp  spmv_cusparse.cuh
results/: ncu_report.csv  speedup.txt  speedup_nnz.csv
results/kernel_execution_time/: csr_adaptive.csv  csr_stream.csv  csr_vector.csv  cusparse.csv
results/kernel_gflops/: csr_adaptive.csv  csr_stream.csv  csr_vector.csv  cusparse.csv
results/ncu/: csr_adaptive.csv  csr_stream.csv  csr_vector.csv  cusparse.csv
results/preprocessing_time_percentage/: csr_adaptive.csv  csr_stream.csv  csr_vector.csv  cusparse.csv
results/speedup/: speedup.txt  speedup_size.csv
results/total_execution_time/: csr_adaptive.csv  csr_stream.csv  csr_vector.csv  cusparse.csv
results/total_gflops/: csr_adaptive.csv  csr_stream.csv  csr_vector.csv  cusparse.csv
scripts/: aggregate_log.py  benchmark.sh  ctest.sh  main.sh  ncu.sh  parse_ncu_report.py  test.sh
src/: csr_matrix.cpp  cuda_event_chrono.cu  dense_vector.cpp  main.cpp  metrics.cpp  mtx_parser.cpp  spmv.cpp  spmv.cu  spmv_common.cu  spmv_cpu.cpp  spmv_csr_adaptive.cu  spmv_csr_stream.cu  spmv_csr_vector.cu  spmv_cusparse.cu
tests/: simple.mtx  test_spmv.cpp
tools/: aggregate_log.py
